tests/cases/compiler-development/artifact/errors/diagnostic-lexer-unicode-escape-eof.diagnostic
diagnostic error code=L0001 family=lexer message="unterminated Unicode escape" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-lexer-unicode-escape-eof.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-lexer-unicode-escape-eof.ari" bytes=53
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-lexer-unicode-escape-eof.ari" line=2 column=16 end_line=2 end_column=20 byte_start=34 byte_end=38 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-lexer-unicode-escape-eof.ari:2:16\n   |\n 2 |   let text = \"\\u{12\n   |                ^^^^"
  Note index=0 location=none message="Unicode escapes must close with } before the string literal continues"
  Help index=0 location=none message="add } after the hexadecimal code point digits"
